# puffer-phc

./: .gitignore  README.md  flake.nix  pyproject.toml  shell.nix
docs/: env.md  overview.md  policy.md
nix/dev-shells/: fhsenv.nix  pixi-impure.nix  uv-impure.nix  uv-pure.nix
nix/pkgsets/: gl.nix
puffer_phc/: body_sets.py  clean_pufferl.py  config.py  env_pufferl.py  humanoid_phc.py  humanoid_phc_mujoco.py  poselib_skeleton.py  smpl.py
puffer_phc/clean_pufferl/: __init__.py  core.py  env.py  pretty.py  structs.py  utils.py
puffer_phc/envs/: common.py  humanoid_phc.py  isaacgym_env.py  render_env.py  state_init.py
puffer_phc/policies/: __init__.py  discriminator_policy.py  lstm_policy.py  phc_policy.py  running_norm.py
scripts/: render_mujoco_frames.py  test_isaaclab.py  test_mujoco.py  train.py
