[project]
name = "humanoid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beartype>=0.20.0",
    "jaxtyping>=0.2.38",
    "tyro>=0.9.16",
]

[project.optional-dependencies]
cuda = [
    "torch==2.5.1",
    "isaaclab[all,isaacsim]==2.0.2",
]
